Fix text alignment of hero unit

--- a/assets/scss/layouts/_hero-unit.scss
+++ b/assets/scss/layouts/_hero-unit.scss
@@ -15,6 +15,7 @@
 
     @include media(">=tablet") {
       width: 65%;
+      margin: 0 auto;
     }
   }
 
